--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "npm install --force && npm audit fix --force && react-scripts start",
-    "build": "npm install --force && npm audit fix --force && react-scripts build",
+    "build": "npm install --force",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
