--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "npm install --force && npm audit fix --force && react-scripts start",
-    "build": "npm install --force",
+    "start": "react-scripts start",
+    "prebuild": "npm install --force --legacy-peer-deps && npm audit fix --force",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
