--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "prebuild": "npm install --force --legacy-peer-deps && npm audit fix --force",
-    "build": "npm install --force",
+    "build": "npm install --force --legacy-peer-deps && npm audit fix --force",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
