--- a/package.json
+++ b/package.json
@@ -3,30 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "axios": "^0.27.2",
-    "dayjs": "^1.10.7",
-    "jwt-decode": "^3.1.2",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "jwt-encode": "^1.0.1",
-    "miragejs": "^0.1.41",
-    "mockman-js": "^1.0.5",
-    "react": "^17.0.2",
+    "miragejs": "^0.1.48",
+    "mockman-js": "^1.1.5",
+    "react": "^18.3.0",
     "react-dom": "^17.0.2",
-    "react-range": "^1.8.12",
-    "react-rangeslider": "^2.2.0",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.3",
-    "uuid": "^8.3.2",
-    "web-vitals": "^0.2.4"
+    "react-router-dom": "^6.23.0",
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1",
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "prebuild": "npm install --force --legacy-peer-deps && npm audit fix --force",
-    "build": "npm install --force --legacy-peer-deps && npm audit fix --force",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm run start",
+    "build": "npm run build"  
   },
   "browserslist": {
     "production": [
